fix height issue of stars and fix stars not showing up

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -113,18 +113,21 @@ body {
     right:0;
     bottom:0;
     width:100%;
-    height:100%;
+    height:auto;
     display:block;
+    overflow: hidden;
   }
   
   .stars {
-    background:#000 url(/images/stars.png) repeat top center;
-    z-index:0;
+    background:url("/images/stars.png") repeat top center;
+    background-color: #000;
+    z-index:1;
   }
   
   .twinkling{
     z-index:0;
-    background:#000 url(/images/twinkling.png) repeat top center;
+    background-color: #000;
+    background: url("/images/twinkling.png") repeat top center;
     -moz-animation:move-twink-back 200s linear infinite;
     -ms-animation:move-twink-back 200s linear infinite;
     -o-animation:move-twink-back 200s linear infinite;
